@@ -2,6 +2,11 @@
 
 	* edelib/Window.h: small clarification about XSETTINGS callback;
 	documented XSETTINGS keys
+	* edelib/IconLoader.h:
+	* src/IconLoader.cpp: added parameter for widget redrawing in set()
+	* edelib/IconLoader.h: some documentation update
+	* src/MimeType.cpp: use new xdgmime's icon lookup feature in fetching icon
+	name, refactored icon fetcher to not use stringtok()
 
 2009-03-20  Sanel <karijes@users.sourceforge.net>
 
